--- a/2.0/core/authproc_attributeadd.html
+++ b/2.0/core/authproc_attributeadd.html
@@ -95,7 +95,7 @@
  If the attribute already exists, the values added will be merged into a multi-valued attribute.
 If you instead want to replace the existing attribute, you may add the
  <code>
-  '%replace'
+  %replace
  </code>
  option.
 </p>
