--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -199,6 +199,16 @@ See the upgrade notes for specific information about upgrading.
 </ul>
 <p>
  <code>
+  adfs
+ </code>
+</p>
+<ul>
+ <li>
+  Fixed incorrect use of StreamedResponse (v2.1.3)
+ </li>
+</ul>
+<p>
+ <code>
   core
  </code>
 </p>
@@ -221,6 +231,9 @@ See the upgrade notes for specific information about upgrading.
  </li>
  <li>
   Fixed undesirable side-effect introduced in v2.3.0 (v2.3.1)
+ </li>
+ <li>
+  Restore the ability to read attributes using a privileged account (v2.3.2)
  </li>
 </ul>
 <p>
