deploy: cc480421d24cacccac8e6878af3251a5fb121362

--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -94,6 +94,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-2010">
+      Version 2.0.10
+     </a>
+    </li>
+    <li>
      <a href="#version-209">
       Version 2.0.9
      </a>
@@ -151,11 +156,17 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
+<h2 id="version-2010">
+ Version 2.0.10
+</h2>
+<p>
+ Released TBD
+</p>
 <h2 id="version-209">
  Version 2.0.9
 </h2>
 <p>
- Released TBD
+ Released 2024-02-03
 </p>
 <ul>
  <li>
@@ -195,6 +206,19 @@ See the upgrade notes for specific information about upgrading.
 <ul>
  <li>
   Disable caching for metadata-endpoint when protect.metadata is true (#1926)
+ </li>
+</ul>
+<p>
+ <code>
+  saml2 library
+ </code>
+</p>
+<ul>
+ <li>
+  Fix serialization for the NameID element
+ </li>
+ <li>
+  Fix inheritance - There is no relation between BaseID and NameID
  </li>
 </ul>
 <h2 id="version-208">
