deploy: cc480421d24cacccac8e6878af3251a5fb121362

--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -246,6 +246,19 @@ See the upgrade notes for specific information about upgrading.
   Disable caching for metadata-endpoint when protect.metadata is true (#1926)
  </li>
 </ul>
+<p>
+ <code>
+  saml2 library
+ </code>
+</p>
+<ul>
+ <li>
+  Fix serialization for the NameID element
+ </li>
+ <li>
+  Fix inheritance - There is no relation between BaseID and NameID
+ </li>
+</ul>
 <h2 id="version-211">
  Version 2.1.1
 </h2>
