--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -94,6 +94,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-213">
+      Version 2.1.3
+     </a>
+    </li>
+    <li>
      <a href="#version-212">
       Version 2.1.2
      </a>
@@ -168,11 +173,17 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
+<h2 id="version-213">
+ Version 2.1.3
+</h2>
+<p>
+ Released TBD
+</p>
 <h2 id="version-212">
  Version 2.1.2
 </h2>
 <p>
- Released TBD
+ Released 2024-02-05
 </p>
 <ul>
  <li>
