deploy: cc480421d24cacccac8e6878af3251a5fb121362

--- a/contributed_modules.html
+++ b/contributed_modules.html
@@ -796,6 +796,12 @@
    </li>
    <li>
     Documentation:
+    <a href="contrib_modules/statistics/authproc_statisticswithattribute.html">
+     authproc_statisticswithattribute.html
+    </a>
+   </li>
+   <li>
+    Documentation:
     <a href="contrib_modules/statistics/statistics.html">
      statistics.html
     </a>
