--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -179,6 +179,17 @@ See the upgrade notes for specific information about upgrading.
 <p>
  Released TBD
 </p>
+<p>
+ <code>
+  core
+ </code>
+</p>
+<ul>
+ <li>
+  Deprecated the core:StatisticsWithAttribute authproc-filter. It is now available in
+  the statistics-module and will be removed from SimpleSAMLphp in a future release.
+ </li>
+</ul>
 <h2 id="version-212">
  Version 2.1.2
 </h2>
