deploy: cc480421d24cacccac8e6878af3251a5fb121362

--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -179,6 +179,11 @@ See the upgrade notes for specific information about upgrading.
 <p>
  Released TBD
 </p>
+<ul>
+ <li>
+  Fix backwards compatibility for mandatory cachedir-setting introduced in 2.1.2
+ </li>
+</ul>
 <p>
  <code>
   core
