--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -162,6 +162,11 @@ See the upgrade notes for specific information about upgrading.
 <p>
  Released TBD
 </p>
+<ul>
+ <li>
+  Fix backwards compatibility for mandatory cachedir-setting introduced in 2.0.9
+ </li>
+</ul>
 <h2 id="version-209">
  Version 2.0.9
 </h2>
