--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -179,6 +179,11 @@ See the upgrade notes for specific information about upgrading.
 <p>
  Released TBD
 </p>
+<ul>
+ <li>
+  Fix backwards compatibility for mandatory cachedir-setting introduced in 2.1.2
+ </li>
+</ul>
 <p>
  <code>
   core
