--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -177,7 +177,7 @@ See the upgrade notes for specific information about upgrading.
  Version 2.1.3
 </h2>
 <p>
- Released TBD
+ Released 2024-02-12
 </p>
 <ul>
  <li>
