deploy: cc480421d24cacccac8e6878af3251a5fb121362

--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -94,6 +94,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-2011">
+      Version 2.0.11
+     </a>
+    </li>
+    <li>
      <a href="#version-2010">
       Version 2.0.10
      </a>
@@ -156,15 +161,28 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
-<h2 id="version-2010">
- Version 2.0.10
+<h2 id="version-2011">
+ Version 2.0.11
 </h2>
 <p>
  Released TBD
 </p>
+<h2 id="version-2010">
+ Version 2.0.10
+</h2>
+<p>
+ Released 2024-02-13
+</p>
 <ul>
  <li>
   Fix backwards compatibility for mandatory cachedir-setting introduced in 2.0.9
+ </li>
+ <li>
+  Bump the
+  <code>
+   composer
+  </code>
+  dependency (CVE-2024-24821)
  </li>
 </ul>
 <h2 id="version-209">
