deploy: cc480421d24cacccac8e6878af3251a5fb121362

--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -94,6 +94,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-214">
+      Version 2.1.4
+     </a>
+    </li>
+    <li>
      <a href="#version-213">
       Version 2.1.3
      </a>
@@ -172,6 +177,12 @@
 <p>
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
+</p>
+<h2 id="version-214">
+ Version 2.1.4
+</h2>
+<p>
+ Released TBD
 </p>
 <h2 id="version-213">
  Version 2.1.3
