deploy: cc480421d24cacccac8e6878af3251a5fb121362

--- a/1.19/simplesamlphp-changelog.html
+++ b/1.19/simplesamlphp-changelog.html
@@ -97,6 +97,13 @@
      <a href="#version-1199">
       Version 1.19.9
      </a>
+     <ul>
+      <li>
+       <a href="#final-release">
+        Final release
+       </a>
+      </li>
+     </ul>
     </li>
     <li>
      <a href="#version-1198">
@@ -552,7 +559,13 @@ See the upgrade notes for specific information about upgrading.
  Version 1.19.9
 </h2>
 <p>
- Released TBD
+ Released 2024-02-23
+</p>
+<h3 id="final-release">
+ Final release
+</h3>
+<p>
+ This is the last release in the 1.19.x version branch. Extended security support ends today!
 </p>
 <ul>
  <li>
