--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -244,6 +244,9 @@ See the upgrade notes for specific information about upgrading.
   Fix inheritance - There is no relation between BaseID and NameID
  </li>
 </ul>
+<p>
+ ** Clear your session store after updating, because old serialized sessions can no longer be unserialized **
+</p>
 <h2 id="version-208">
  Version 2.0.8
 </h2>
