deploy: cc480421d24cacccac8e6878af3251a5fb121362

--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -167,6 +167,11 @@ See the upgrade notes for specific information about upgrading.
 <p>
  Released TBD
 </p>
+<ul>
+ <li>
+  Fix static call for non-static method in bin/importPdoMetadata.php (#1969)
+ </li>
+</ul>
 <h2 id="version-2010">
  Version 2.0.10
 </h2>
