deploy: cc480421d24cacccac8e6878af3251a5fb121362

--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -188,6 +188,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fix static call for non-static method in bin/importPdoMetadata.php (#1969)
  </li>
+ <li>
+  Validate AuthState before processing it (#1706)
+ </li>
 </ul>
 <h2 id="version-213">
  Version 2.1.3
