--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -171,6 +171,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fix static call for non-static method in bin/importPdoMetadata.php (#1969)
  </li>
+ <li>
+  Validate AuthState before processing it (#1706)
+ </li>
 </ul>
 <h2 id="version-2010">
  Version 2.0.10
