--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -253,7 +253,7 @@ See the upgrade notes for specific information about upgrading.
  </li>
 </ul>
 <p>
- ** Clear your session store after updating, because old serialized sessions can no longer be unserialized **
+ NOTE: Clear your session store after updating, because old serialized sessions can no longer be unserialized
 </p>
 <h2 id="version-208">
  Version 2.0.8
