deploy: cc480421d24cacccac8e6878af3251a5fb121362

--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -191,6 +191,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Validate AuthState before processing it (#1706)
  </li>
+ <li>
+  Fix possible incompatible dependency-set (#1981)
+ </li>
 </ul>
 <h2 id="version-213">
  Version 2.1.3
