--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -94,6 +94,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-215">
+      Version 2.1.5
+     </a>
+    </li>
+    <li>
      <a href="#version-214">
       Version 2.1.4
      </a>
@@ -178,11 +183,17 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
+<h2 id="version-215">
+ Version 2.1.5
+</h2>
+<p>
+ Released TBD
+</p>
 <h2 id="version-214">
  Version 2.1.4
 </h2>
 <p>
- Released TBD
+ Released 2024-02-29
 </p>
 <ul>
  <li>
