--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -174,6 +174,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Validate AuthState before processing it (#1706)
  </li>
+ <li>
+  Fix incorrect method call introduced in 2.0.6 (#1996)
+ </li>
 </ul>
 <h2 id="version-2010">
  Version 2.0.10
