--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -189,6 +189,11 @@ See the upgrade notes for specific information about upgrading.
 <p>
  Released TBD
 </p>
+<ul>
+ <li>
+  Fix incorrect method call introduced in 2.0.6 (#1996)
+ </li>
+</ul>
 <h2 id="version-214">
  Version 2.1.4
 </h2>
