--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -94,6 +94,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-2012">
+      Version 2.0.12
+     </a>
+    </li>
+    <li>
      <a href="#version-2011">
       Version 2.0.11
      </a>
@@ -161,11 +166,17 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
+<h2 id="version-2012">
+ Version 2.0.12
+</h2>
+<p>
+ Released TBD
+</p>
 <h2 id="version-2011">
  Version 2.0.11
 </h2>
 <p>
- Released TBD
+ Released 2024-03-08
 </p>
 <ul>
  <li>
