deploy: cc480421d24cacccac8e6878af3251a5fb121362

--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -94,6 +94,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-216">
+      Version 2.1.6
+     </a>
+    </li>
+    <li>
      <a href="#version-215">
       Version 2.1.5
      </a>
@@ -183,11 +188,17 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
+<h2 id="version-216">
+ Version 2.1.6
+</h2>
+<p>
+ Released TBD
+</p>
 <h2 id="version-215">
  Version 2.1.5
 </h2>
 <p>
- Released TBD
+ Released 2024-03-08
 </p>
 <ul>
  <li>
