deploy: a1cab1c39628dfc0105486c71f2ea66c20dda40d

--- a/devel/simplesamlphp-idp.html
+++ b/devel/simplesamlphp-idp.html
@@ -392,13 +392,15 @@
 <span class="nv">$config</span> <span class="o">=</span> <span class="p">[</span>
     <span class="s1">'example-userpass'</span> <span class="o">=&gt;</span> <span class="p">[</span>
         <span class="s1">'exampleauth:UserPass'</span><span class="p">,</span>
-        <span class="s1">'student:studentpass'</span> <span class="o">=&gt;</span> <span class="p">[</span>
-            <span class="s1">'uid'</span> <span class="o">=&gt;</span> <span class="p">[</span><span class="s1">'student'</span><span class="p">],</span>
-            <span class="s1">'eduPersonAffiliation'</span> <span class="o">=&gt;</span> <span class="p">[</span><span class="s1">'member'</span><span class="p">,</span> <span class="s1">'student'</span><span class="p">],</span>
-        <span class="p">],</span>
-        <span class="s1">'employee:employeepass'</span> <span class="o">=&gt;</span> <span class="p">[</span>
-            <span class="s1">'uid'</span> <span class="o">=&gt;</span> <span class="p">[</span><span class="s1">'employee'</span><span class="p">],</span>
-            <span class="s1">'eduPersonAffiliation'</span> <span class="o">=&gt;</span> <span class="p">[</span><span class="s1">'member'</span><span class="p">,</span> <span class="s1">'employee'</span><span class="p">],</span>
+        <span class="s1">'users'</span> <span class="o">=&gt;</span> <span class="p">[</span>
+            <span class="s1">'student:studentpass'</span> <span class="o">=&gt;</span> <span class="p">[</span>
+                <span class="s1">'uid'</span> <span class="o">=&gt;</span> <span class="p">[</span><span class="s1">'student'</span><span class="p">],</span>
+                <span class="s1">'eduPersonAffiliation'</span> <span class="o">=&gt;</span> <span class="p">[</span><span class="s1">'member'</span><span class="p">,</span> <span class="s1">'student'</span><span class="p">],</span>
+            <span class="p">],</span>
+            <span class="s1">'employee:employeepass'</span> <span class="o">=&gt;</span> <span class="p">[</span>
+                <span class="s1">'uid'</span> <span class="o">=&gt;</span> <span class="p">[</span><span class="s1">'employee'</span><span class="p">],</span>
+                <span class="s1">'eduPersonAffiliation'</span> <span class="o">=&gt;</span> <span class="p">[</span><span class="s1">'member'</span><span class="p">,</span> <span class="s1">'employee'</span><span class="p">],</span>
+            <span class="p">],</span>
         <span class="p">],</span>
     <span class="p">],</span>
 <span class="p">];</span>
