deploy: a1cab1c39628dfc0105486c71f2ea66c20dda40d

--- a/2.2/simplesamlphp-changelog.html
+++ b/2.2/simplesamlphp-changelog.html
@@ -196,6 +196,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fix regression in bin/initMDSPdo.php (was #1892)
  </li>
+ <li>
+  Fix regression in translations, causing a fallback to English (#2009 + #2010)
+ </li>
 </ul>
 <h2 id="version-220">
  Version 2.2.0
