--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -99,6 +99,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-222">
+      Version 2.2.2
+     </a>
+    </li>
+    <li>
      <a href="#version-221">
       Version 2.2.1
      </a>
@@ -186,11 +191,17 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
+<h2 id="version-222">
+ Version 2.2.2
+</h2>
+<p>
+ Released TBD
+</p>
 <h2 id="version-221">
  Version 2.2.1
 </h2>
 <p>
- Released TBD
+ Released 2014-03-17
 </p>
 <ul>
  <li>
