deploy: a1cab1c39628dfc0105486c71f2ea66c20dda40d

--- a/2.2/simplesamlphp-changelog.html
+++ b/2.2/simplesamlphp-changelog.html
@@ -197,6 +197,15 @@ See the upgrade notes for specific information about upgrading.
 <p>
  Released TBD
 </p>
+<ul>
+ <li>
+  Fix regression when setting the host-variable in
+  <code>
+   saml20-idp-hosted
+  </code>
+  (was #1922)
+ </li>
+</ul>
 <h2 id="version-221">
  Version 2.2.1
 </h2>
