--- a/devel/simplesamlphp-maintenance.html
+++ b/devel/simplesamlphp-maintenance.html
@@ -715,6 +715,10 @@ Username and password for accessing the database can be configured in the
  </code>
  ,
  <code>
+  directory
+ </code>
+ ,
+ <code>
   serialize
  </code>
  ,
@@ -735,9 +739,19 @@ example configuration of different metadata sources in use at the same time:
 <span class="x">    ['type' =&gt; 'flatfile'],</span>
 <span class="x">    ['type' =&gt; 'flatfile', 'directory' =&gt; 'metadata/metarefresh-kalmar'],</span>
 <span class="x">    ['type' =&gt; 'serialize', 'directory' =&gt; 'metadata/metarefresh-ukaccess'],</span>
+<span class="x">    ['type' =&gt; 'directory'],</span>
+<span class="x">    ['type' =&gt; 'directory', 'directory' =&gt; 'metadata/somewhere-else'],</span>
 <span class="x">],</span>
 </code></pre>
 </div>
+<p>
+ The directory type storage backend will look in subdirectories such as
+saml20-idp-hosted.d and saml20-sp-remote.d in the given directory (or
+the 'metadatadir' configuration option in 'config.php' by default).
+All xml and php files found in those subdirectories will be loaded. It is
+currently an error to have subdirectories inside the
+saml20-sp-remote.d directories.
+</p>
 <p>
  You may also implement your own metadata storage handler, in a very similar way to how you would implement
 your own session handler. Your class
