deploy: a1cab1c39628dfc0105486c71f2ea66c20dda40d

--- a/2.2/index.html
+++ b/2.2/index.html
@@ -235,6 +235,12 @@
     </a>
     - covers bridging protocols, attribute filtering, etc.
    </li>
+   <li>
+    <a href="simplesamlphp-developer-information.html">
+     Developer documentation
+    </a>
+    - code overview and other docs for new and returning developers
+   </li>
   </ul>
  </li>
  <li>
