--- a/stable/index.html
+++ b/stable/index.html
@@ -235,6 +235,12 @@
     </a>
     - covers bridging protocols, attribute filtering, etc.
    </li>
+   <li>
+    <a href="simplesamlphp-developer-information.html">
+     Developer documentation
+    </a>
+    - code overview and other docs for new and returning developers
+   </li>
   </ul>
  </li>
  <li>
