--- a/devel/simplesamlphp-changelog.html
+++ b/devel/simplesamlphp-changelog.html
@@ -99,6 +99,16 @@
    </a>
    <ul>
     <li>
+     <a href="#version-222">
+      Version 2.2.2
+     </a>
+    </li>
+    <li>
+     <a href="#version-221">
+      Version 2.2.1
+     </a>
+    </li>
+    <li>
      <a href="#version-220">
       Version 2.2.0
      </a>
@@ -181,6 +191,35 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
+<h2 id="version-222">
+ Version 2.2.2
+</h2>
+<p>
+ Released TBD
+</p>
+<ul>
+ <li>
+  Fix regression when setting the host-variable in
+  <code>
+   saml20-idp-hosted
+  </code>
+  (was #1922)
+ </li>
+</ul>
+<h2 id="version-221">
+ Version 2.2.1
+</h2>
+<p>
+ Released 2014-03-17
+</p>
+<ul>
+ <li>
+  Fix regression in bin/initMDSPdo.php (was #1892)
+ </li>
+ <li>
+  Fix regression in translations, causing a fallback to English (#2009 + #2010)
+ </li>
+</ul>
 <h2 id="version-220">
  Version 2.2.0
 </h2>
