--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -192,6 +192,16 @@ See the upgrade notes for specific information about upgrading.
 <p>
  Released TBD
 </p>
+<p>
+ <code>
+  ldap
+ </code>
+</p>
+<ul>
+ <li>
+  Fix exception being thrown when password is empty
+ </li>
+</ul>
 <h2 id="version-215">
  Version 2.1.5
 </h2>
