--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -206,6 +206,16 @@ See the upgrade notes for specific information about upgrading.
   (was #1922)
  </li>
 </ul>
+<p>
+ <code>
+  ldap
+ </code>
+</p>
+<ul>
+ <li>
+  Fix exception being thrown when password is empty
+ </li>
+</ul>
 <h2 id="version-221">
  Version 2.2.1
 </h2>
