--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -192,6 +192,11 @@ See the upgrade notes for specific information about upgrading.
 <p>
  Released TBD
 </p>
+<ul>
+ <li>
+  Fix posting the form to the incorrect endpoint when using an authsource based on UserPassOrgBase (#2022)
+ </li>
+</ul>
 <p>
  <code>
   ldap
