--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -205,6 +205,9 @@ See the upgrade notes for specific information about upgrading.
   </code>
   (was #1922)
  </li>
+ <li>
+  Fix posting the form to the incorrect endpoint when using an authsource based on UserPassOrgBase (#2022)
+ </li>
 </ul>
 <p>
  <code>
