deploy: a1cab1c39628dfc0105486c71f2ea66c20dda40d

--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -182,6 +182,16 @@ See the upgrade notes for specific information about upgrading.
   Fix posting the form to the incorrect endpoint when using an authsource based on UserPassOrgBase (#2022)
  </li>
 </ul>
+<p>
+ <code>
+  exampleauth
+ </code>
+</p>
+<ul>
+ <li>
+  Fix controller for External-authsource
+ </li>
+</ul>
 <h2 id="version-2011">
  Version 2.0.11
 </h2>
