--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -199,6 +199,16 @@ See the upgrade notes for specific information about upgrading.
 </ul>
 <p>
  <code>
+  exampleauth
+ </code>
+</p>
+<ul>
+ <li>
+  Fix controller for External-authsource
+ </li>
+</ul>
+<p>
+ <code>
   ldap
  </code>
 </p>
