--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -211,6 +211,16 @@ See the upgrade notes for specific information about upgrading.
 </ul>
 <p>
  <code>
+  admin
+ </code>
+</p>
+<ul>
+ <li>
+  Set custom security header to properly display phpinfo-page
+ </li>
+</ul>
+<p>
+ <code>
   exampleauth
  </code>
 </p>
