--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -208,6 +208,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fix posting the form to the incorrect endpoint when using an authsource based on UserPassOrgBase (#2022)
  </li>
+ <li>
+  Fix RequestedAuthnContextSelector for case with multiple RACs in request
+ </li>
 </ul>
 <p>
  <code>
