deploy: a1cab1c39628dfc0105486c71f2ea66c20dda40d

--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -209,6 +209,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Set custom security header to properly display phpinfo-page
  </li>
+ <li>
+  Hide file-upload button for metadata-converter is uploads are disabled at PHP-level
+ </li>
 </ul>
 <p>
  <code>
