--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -194,6 +194,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Set custom security header to properly display phpinfo-page
  </li>
+ <li>
+  Hide file-upload button for metadata-converter is uploads are disabled at PHP-level
+ </li>
 </ul>
 <p>
  <code>
