deploy: a1cab1c39628dfc0105486c71f2ea66c20dda40d

--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -199,6 +199,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fix RequestedAuthnContextSelector for case with multiple RACs in request
  </li>
+ <li>
+  Add xml opening-tag to SP-metadata for consistency with IdP-metadata (#2048)
+ </li>
 </ul>
 <p>
  <code>
