deploy: a1cab1c39628dfc0105486c71f2ea66c20dda40d

--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -187,6 +187,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Add xml opening-tag to SP-metadata for consistency with IdP-metadata (#2048)
  </li>
+ <li>
+  Fixed a PHP 8.3 compliance issue in the logout handler (#2047)
+ </li>
 </ul>
 <p>
  <code>
