deploy: a1cab1c39628dfc0105486c71f2ea66c20dda40d

--- a/2.2/simplesamlphp-changelog.html
+++ b/2.2/simplesamlphp-changelog.html
@@ -265,6 +265,16 @@ See the upgrade notes for specific information about upgrading.
   Fix regression in translations, causing a fallback to English (#2009 + #2010)
  </li>
 </ul>
+<p>
+ <code>
+  sqlauth
+ </code>
+</p>
+<ul>
+ <li>
+  Add multi-query support (simplesamlphp/simplesamlphp-module-sqlauth#9) (v1.2.0)
+ </li>
+</ul>
 <h2 id="version-220">
  Version 2.2.0
 </h2>
