--- a/devel/simplesamlphp-maintenance.html
+++ b/devel/simplesamlphp-maintenance.html
@@ -345,7 +345,7 @@ settings by leaving these options unset or setting them to
   \SimpleSAML\Session
  </code>
  class, like described
- <a href="simplesamlphp-sp#section_6.html">
+ <a href="simplesamlphp-sp#integrating-authentication-with-your-own-application.html">
   here
  </a>
  .
@@ -823,7 +823,7 @@ alternative, you may log to flat files.
 </h2>
 <p>
  Basic Apache configuration is described in
- <a href="simplesamlphp-install#section_6.html">
+ <a href="simplesamlphp-install#configuring-apache.html">
   SimpleSAMLphp Installation
  </a>
  .
