deploy: a1cab1c39628dfc0105486c71f2ea66c20dda40d

--- a/2.0/saml/nameid.html
+++ b/2.0/saml/nameid.html
@@ -200,7 +200,7 @@
  .
 The filter will take the user ID from the attribute described in the
  <code>
-  attribute
+  identifyingAttribute
  </code>
  option, and hash it with the
  <code>
