--- a/2.2/saml/nameid.html
+++ b/2.2/saml/nameid.html
@@ -200,7 +200,7 @@
  .
 The filter will take the user ID from the attribute described in the
  <code>
-  attribute
+  identifyingAttribute
  </code>
  option, and hash it with the
  <code>
