deploy: a1cab1c39628dfc0105486c71f2ea66c20dda40d

--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -190,6 +190,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fixed a PHP 8.3 compliance issue in the logout handler (#2047)
  </li>
+ <li>
+  Improve parsing of base64-encoded strings
+ </li>
 </ul>
 <p>
  <code>
