--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -220,6 +220,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Improve parsing of base64-encoded strings
  </li>
+ <li>
+  Autofill username when Entra ID hints it in the HTTP parameters
+ </li>
 </ul>
 <p>
  <code>
