deploy: a1cab1c39628dfc0105486c71f2ea66c20dda40d

--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -99,6 +99,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-217">
+      Version 2.1.7
+     </a>
+    </li>
+    <li>
      <a href="#version-216">
       Version 2.1.6
      </a>
@@ -186,11 +191,17 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
+<h2 id="version-217">
+ Version 2.1.7
+</h2>
+<p>
+ Released TBD
+</p>
 <h2 id="version-216">
  Version 2.1.6
 </h2>
 <p>
- Released TBD
+ Released 30-04-2024
 </p>
 <ul>
  <li>
